first and second page

--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,195 @@
-first-nav{
+
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+
+
+
+.quicksand-normal {
+  font-family: "Quicksand", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+.navbar{
+    display: flex;
+    justify-content: space-around;
+}
+.pera{
+    display: flex;
+    gap: 32px;
+    margin: 0px 186px;
+
+}
+.hed{
+    display: flex;
+
+}
+.first-hed{
+    font-size: 2.4rem;
+font-weight: 700;
+}
+.first-p{
+    font-size: 1.2rem;
+    color: rgb(254, 163, 1);
+}
+.second-p{
+    font-size: 1.2rem;
+    color: rgb(1, 172, 253);
+}
+.third-p{
+    font-size: 1.2rem;
+   color:  rgb(5, 212, 223);
+
+
     
+}
+.fourth-p{
+    font-size: 1.2rem;
+    color: rgb(93, 88, 239);
+}
+.first-btn{
+  
+    background-color: rgb(254, 163, 1);
+    color: white;
+    border-radius: 5px;
+    border: none;
+    width: 197px;
+height: 50px;
+align-items: center;
+}
+.banner{
+    display: flex;
+}
+.bn-hed{
+    margin: 24px 0px;
+    font-size: 3.2rem;
+font-weight: 700;
+}
+.banner-p{
+    font-size: 1.2rem;
+font-weight: 400;
+}
+.second-btn{
+    margin: 24px 0px;
+    padding: 10px;
+    background-color: rgb(17, 17, 17);
+    color: white;
+    border-radius: 5px;
+    border: none;
+    gap: 10px;
+    width: 197px;
+height: 50px;
+}
+.kids{
+  position: absolute;
+  left: 788px;
+  margin-bottom: 20px;
+  
+}
+.text-colour{
+    color: yellow;
+
+}
+.text2-colour{
+    color: blueviolet;
+}
+.hed2{
+   
+    align-items: center;
+    justify-content: center;
+    
+}
+.stan{
+    
+display: flex;
+flex-direction: column;
+justify-content: flex-start;
+align-items: center;
+gap: 80;
+padding: 60px 0px 60px 0px;
+margin-top: 150px;
+font-size: 2.1rem;
+font-weight: 700;
+}
+.secondpage-div{
+    display: flex;
+    
+    gap: 10px;
+   
+}
+.kinder{
+    box-sizing: border-box;
+border: 0.94px solid rgb(222, 245, 255);
+border-radius: 18.86px;
+
+box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+background: linear-gradient(180.00deg, rgb(222, 245, 255),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
+  
+}
+.elementary{
+    box-sizing: border-box;
+border: 0.94px solid rgb(255, 244, 220);
+border-radius: 18.86px;
+
+box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+background: linear-gradient(180.00deg, rgb(255, 244, 220),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
+    
+}
+.middle{
+    box-sizing: border-box;
+border: 0.94px solid rgb(242, 232, 255);
+border-radius: 18.86px;
+
+box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+background: linear-gradient(180.00deg, rgb(238, 225, 255),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
+
+}
+.pera2{
+color: rgb(100, 200, 255);
+
+}
+.pera3{
+    color: rgb(240, 170, 0);
+}
+.pera4{
+    color:  rgb(135, 0, 255);
+
+}
+.second-page{
+    background-image: url(../assets/bg.png);
+}
+
+
+
+
+
+
+
+
+@media screen and (max-width:576px) {
+    .navbar,.hed,.pera,.banner{
+        flex-direction: column;
+        
+
+        
+    }
+    .logo{
+        height: 46px;
+        width: 46px;
+    }
+    bn-hed{
+        width: 357px;
+        height: 120px;
+    }
+    .banner-p{
+        width: 357px;
+        height: 54px;
+
+    }
+    
+}
+@media screen and (max-width:576px) {
+.secondpage-div{
+    flex-direction: column;
+    margin: 20px;
+}    
 }
