--- a/style/style.css
+++ b/style/style.css
@@ -265,6 +265,24 @@ border: none;
     background: url(image),linear-gradient(0.00deg, rgba(254, 163, 1, 0.3),rgba(255, 255, 255, 0.3) 100%);
     
  }
+
+ footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: rgb(80, 129, 201);
+}
+
+.foot-left{
+    width: 300px;
+}
+.foot-left-h{
+    display: flex;
+    align-items: center;
+}
+li{
+    list-style: none;
+}
  
 
 
@@ -309,3 +327,9 @@ border: none;
 
 }
     
+@media screen and(max-width:576px) {
+    footer,.foot-left-h{
+        flex-direction: column;
+    }
+    
+}
